--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
   <div class="container">
-    <a class="navbar-brand" href="/">penIt</a>
+    <a class="navbar-brand" href="/">PenIt</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,6 +12,15 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="DropdownMenuLink">Ideas</a>
+          <div class="dropdown-menu">
+            <a href="/ideas" class="dropdown-item">Ideas</a>
+            <a href="/ideas/add" class="dropdown-item">Add Idea</a>
+          </div>
         </li>
       </ul>
     </div>
