Add route for displaying ideas and validated from server side

--- a/views/ideas/add.handlebars
+++ b/views/ideas/add.handlebars
@@ -1,3 +1,9 @@
+{{#each errors}}
+  <div class="alert alert-danger">{{text}}</div>
+{{else}}
+
+{{/each}}
+
 <div class="card card-body">
   <h3>Idea</h3>
   <form action="/ideas" method="POST">
