--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-md-6 mx-auto">
     <div class="card card-body">
+      <img src="/img/logo.png" class="logo">
       <h3 class="text-center">Account Login</h3>
-      <form method="POST" action="/">
+      <form method="POST" action="/users/login">
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" class="form-control" name="email" value="{{email}}" required>
