--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-6 mx-auto">
     <div class="card card-body">
+      <img src="/img/logo.png" class="logo">
       <h3 class="text-center">Account Register</h3>
       <form method="POST" action="/users/register">
         <div class="form-group">
