--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -13,3 +13,11 @@
     </button>
   </div>
 {{/if}}
+
+{{#if error_msg2}}
+  <div class="alert alert-secondary alert-dismissible fade show">{{error_msg2}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+{{/if}}
